update web serial example

--- a/extras/web_serial_example/index.html
+++ b/extras/web_serial_example/index.html
@@ -52,8 +52,8 @@
             output in the VSCode terminal.  Next, disconnect the USB Serial port 
             in VSCode, click the Connect button below and choose the same port 
             name to connect. The question mark should change to values that are being 
-            sent over the Serial port.  Test with <a href="counter.py">counter.py</a> 
-            or <a href="button_counter.py">button_counter.py</a> running on the 
+            sent over the Serial port.  Test with <a href="countdown.py">countdown.py</a> 
+            or <a href="button_countdown.py">button_countdown.py</a> running on the 
             Atom Matrix. 
         </p>
         <button id="connect-button" type="button">🔌 Connect</button>
